app/assetsite/s/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require jquery-ui.min.css
 *= require bootstrap.min.css
 *= require_self
 */

// Padding
$padding-xlarge: 150px;
$padding-large: 75px;
$padding-medium: 50px;
$padding-small: 25px;
$padding-xsmall: 15px;

// Colors
$red-regular: #C30016;
$red-hover: #E30000;
$appdev-red: #B73D34;
$appdev-red-muted: rgba(183, 61, 52, 0.7);
$appdev-red-highlight: #E30000;
$footer-gray: #3B3D40;
$white-01: rgba(255, 255, 255, 0.1);
$white-03: rgba(255, 255, 255, 0.3);
$white-05: rgba(255, 255, 255, 0.5);
$off-white: #F9F9F9;
$dark-gray: rgb(66, 66, 66);

.white { background-color: white; }
.black { background-color: rgb(45, 45, 45); }
.offwhite { background-color: #F9F9F9; }
.gray { background-color: rgb(149, 149, 149); }
.darkgray { background-color: $dark-gray; }

// Text colors
.text-black { color: black; }
.text-white { color: white; }

// Font Weights
.bold { font-weight: bold; }
.semibold { font-weight: 500; }

// Font Sizes
$fsize-title: 40px; // Section titles
$fsize-subtitle: 24px; // Action component titles & subtitles
$fsize-action: 18px; // High action components text
$fsize-body: 16px; // Main text font for paragraphs

.size-24 { font-size: 24px; }
.size-18 { font-size: 18px; }
.size-14 { font-size: 14px; }
.text-xlarge { font-size: 64px; }
.text-large { font-size: 50px; }
.text-medium { font-size: 26px; }
.text-small { font-size: 14px; }

// Alignment
.text-center { text-align: center; }
.center { margin: auto; }

// Global Styles

body {
  margin: 0 !important;
  padding: 0 !important;
  font-size: $fsize-body;
  color: black;
}

a:hover, a:focus {
  text-decoration: none;
}

// For navbar
.navbar-default {
  background-color: transparent;
  min-height: 90px;
}

.icon-bar {
  background-color: white;
}

.white-nav-element {
  color: white !important;
}

.active-page {
  color: $appdev-red !important;
}

// Red section title
.section-title {
  padding-bottom: $padding-small;
  color: $appdev-red;
  font-size: $fsize-title;
}

// Components

.high-action-component {
  display: inline-flex;
  width: 100%;
  min-height: 100px;
  background-color: $appdev-red;
}

.high-action-info {
  margin: auto $padding-xlarge;
  display: inline-flex;
  width: 100%;
}

.high-action-text {
  margin: $padding-small auto $padding-small 0;
  padding-right: $padding-small;
  font-weight: bold;
  font-size: $fsize-action;
  color: white;
}

.high-action-button {
  margin: $padding-small 0 $padding-small auto;
  font-size: 14px;
}

.action-component {
  width: 100%;
  position: relative;
  padding: $padding-large 0;
  background-color: $off-white;
}

.component-width {
  margin: auto;
  max-width: 400px;
}

.component-title, .subtitle {
  font-weight: bold;
  font-size: $fsize-subtitle;
}

.component-subtitle {
  padding: $padding-small;
}

// Center section title

.red-header {
  font-weight: bold;
  font-size: $fsize-subtitle;
  color: $appdev-red;
}

.center-underline {
  margin: 15px auto;
  width: 60px;
  height: 1px;
  background-color: $appdev-red;
}

// BARS - For various sections

.section {
  width: 100%;
  position: relative;
  padding: $padding-large $padding-xlarge;
}

// Red links used on various pages
.red-link {
  color: $appdev-red;
  font-weight: bold;

  &:hover,
  &:focus {
    color: $red-hover;
  }
}

// Buttons

.white-button, .red-button {
  display: inline-block;
  max-height: 40px;
  min-width: 120px;
  padding: 5px 20px;
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
}

.red-button {
  border: 1.5px solid $appdev-red;
  color: $appdev-red;

  &:hover,
  &:focus {
    color: $red-hover;
    border-color: $red-hover;
  }
}

.white-button {
  border: 1.5px solid white;
  color: white;

  &:hover,
  &:focus {
    color: $off-white;
    border-color: $off-white;
  }
}

// Padding for massive screens
@media screen and (min-width: 1601px) {

  .text {
    padding-top: 300px;
    padding-bottom: 300px;
    text-align: center;
    margin-bottom: 0px;
  }

}

// Padding on larger screens
@media screen and (max-width: 1600px) {

  .text {
    padding-top: 225px;
    padding-bottom: 225px;
    text-align: center;
    margin-bottom: 0px;
  }

}

// Padding on smaller screens
@media screen and (max-width: 768px) {

  .navbar-default {
    min-height: 60px;
  }

  .section {
    padding: $padding-large $padding-large;
  }

  .high-action-info {
    margin: auto $padding-large;
  }

  .text {
    padding-top: 100px;
    padding-bottom: 100px;
    text-align: center;
    margin-bottom: 0px;
  }

  .text-white, .text-black, .text-black-paragraph {
    margin-left: 15px;
    margin-right: 15px;
    font-size: 16px;
  }

  .text-xlarge {
    font-size: 32px;
  }

  // Slightly larger than white/black text
  .text-large {
    font-size: 22px;
  }

  .text-top {
    padding-top: 60px;
  }

  .text-bottom {
    padding-bottom: 60px;
  }

  // Reduced padding for banner bars on mobile
  .white section,
  .black section,
  .offwhite section,
  .gray section,
  .darkgray section {
    padding-top: $padding-medium;
    padding-bottom: $padding-medium;
  }

  .bullet {
    padding-bottom: 50px;
  }

}

@media screen and (max-width: 480px) {
  .section {
    padding: $padding-medium $padding-medium;
  }

  .high-action-info {
    margin: auto $padding-medium;
  }

  .high-action-info {
    display: block;
  }

  .high-action-text {
    padding: 0;
    margin: $padding-small auto;
    text-align: center;
  }
  .high-action-button {
    display: block;
    margin: $padding-small auto;
    width: 120px;
  }
}

@media screen and (max-width: 320px) {
  .section {
    padding: $padding-small $padding-small;
  }

  .high-action-info {
    margin: auto $padding-small;
  }
}

